script bash e ajuste .pom

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<executions>
 					<execution>
