--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.jgroups</groupId>
             <artifactId>jgroups</artifactId>
-            <version>3.6.4.Final</version>
+            <version>5.3.0.Final</version>
         </dependency>
     </dependencies>
 
@@ -70,7 +70,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>Server</mainClass>
+                                    <mainClass>Server.Server</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
